@@ -14,6 +14,7 @@ Typical Config Looks like:
  "realm"   : realm to use for Web Tests
  "realmUriMethod":     your "Class::method" to convert realm and domain INTO url
  "realmDetectMethod":  your "Class::method" to detect realm (like from server name or your config)
+ "errorCallback": Class::method to enrich every error results. see docs below
 }
 ```
 
@@ -22,9 +23,18 @@ To extend STest - extend standard STest class with your functionality, specify n
 For example: extend Reporter - send Slack messages when stest finished with Alert or Error
 
 
-
-
-Do not use: (so far system-only mapping)
 {
  "stest"   :"STest",       # CLASS to use for Base methods
 }
+
+
+## errorCallback details
+
+/**
+  * @param string $err - error message
+  * @param int $line - line number where error occurred
+  * @param string $code - code where error occurred
+  * @param array $ARG - STEST arguments
+  * @return array ['item to add' => 'value', ...]
+  */
+static function errorCallback(string $err, int $line, string $code, array $ARG): array;
