@@ -11,7 +11,7 @@ if [ "$1" == "--help" ]; then
 #  echo "  --tag=\"tag1 tag2 -tag3\" : execute tests matching tags" - not implemented yet
   echo "  --list : list tests"
 #  echo " -v  : verbose - show test names"   << DEFAULT
-  echo "  -q     : quite - show only errors"
+  echo "  -q     : quiet - show only errors"
   exit 1
 fi
 
@@ -23,9 +23,9 @@ fi
 # check for GNU parallel
 [[ $(type -P parallel) ]] || { echo "GNU parallel required"; exit 1; }
 
-quite=0
+quiet=0
 if [ "$1" == "-q" ]; then
-  quite=1
+  quiet=1
   shift
 fi
 
@@ -34,7 +34,7 @@ if [ ! -z "$1" ]; then
 fi
 
 # show errors only (in STDERR)
-if [ $quite == 1 ]; then
+if [ $quiet == 1 ]; then
   find . -name "*.stest" -executable | parallel -j0 '{} -s'
   exit
 fi
