@@ -1,3 +1,4 @@
+2025-06-03 - V3.3.3 - Config: `errorCallback` added - see Config.md 
 2024-06-11 - V3.2.5 - trim error case results to 360 characters. useful for web tests where results can be huge
 2024-01-03 - V3.2.3 - realm detect fix, better error reporting for "~ 'xxx'" operators
 2023-12-27 - V3.2.2 - web-tests: support for content-encdoding: zstd,gzip,brotli; content-type (autodecoding): json,msgpack,igbinary - see web-tests/examples
